# center-cluster-esp32-p4

./: .clangd  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  lv_conf.h  main.c
main/canbus/: canbus.c  canbus.h  protocol_loader.c  protocol_loader.h
main/canbus/protocols/: emtron.json  haltech.json
main/gps_wrap/: gps_wrapper.cpp  gps_wrapper.h
main/lap_timer/: lap_timer.c  lap_timer.h
main/odometer/: odometer.c  odometer.h
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h
main/ui/boot/: boot_screen.c
main/ui/fonts/: ui_font_DIN_1451_Mittelschrift_.c  ui_font_DIN_1451__96.c  ui_font_DSGE7_Classic_80.c
main/ui/images/: ui_img_gauge_needle_png.c  ui_img_needle_no_shadow65_png.c
main/ui/screens/: ui_BootScreen.c  ui_BootScreen.h  ui_MainSpeedo.c  ui_MainSpeedo.h  ui_OtherData.c  ui_OtherData.h
